--- a/index.html
+++ b/index.html
@@ -5,15 +5,15 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>A.M.E</title>
-  <link rel="stylesheet" href="../node_modules/simplemde/dist/simplemde.min.css">
-  <link rel="stylesheet" href="./css/main.css">
+  <link rel="stylesheet" href="node_modules/simplemde/dist/simplemde.min.css">
+  <link rel="stylesheet" href="src/css/main.css">
 </head>
 <body>
 
   <textarea name="mde" id="mde" cols="30" rows="10"></textarea>
 
-  <script src="../node_modules/simplemde/dist/simplemde.min.js"></script>
-  <script src="./js/mde.js"></script>
+  <script src="node_modules/simplemde/dist/simplemde.min.js"></script>
+  <script src="src/js/mde.js"></script>
 
 </body>
 </html>
