Added custom menu events

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 
   <script src="src/js/simplemde.min.js"></script>
   <script src="src/js/mde.js"></script>
+  <script src="src/js/renderer.js"></script>
 
 </body>
 </html>
